Modified: wflow-consoleweb - Universal Theme- Reduced gap between fields. @6.0-SNAPSHOT Fixed: wflow-consoleweb - Universal Theme- Textarea width is wrong in small screen. @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/universal/css/form.css
+++ b/wflow-consoleweb/src/main/webapp/universal/css/form.css
@@ -240,6 +240,9 @@ body .filter-cell select:not([class^=ui]){
     body .form-container .chosen-container{
         max-width: 70%;
     }
+    body .form-container textarea[cols] {
+        width: 70%;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -261,6 +264,9 @@ body .filter-cell select:not([class^=ui]){
     body .form-container .subform-cell-value,
     body .form-container .chosen-container{
         max-width: 100%;
+    }
+    body .form-container textarea[cols] {
+        width: 100%;
     }
 }
 
@@ -453,6 +459,7 @@ body .form-column, body .subform-column {
 
 body .form-cell, body .subform-cell {
     color: inherit;
+    padding: 0;
 }
 
 body .subform-cell-validator, body .form-cell-validator {
